--- a/log.io.html
+++ b/log.io.html
@@ -85,7 +85,7 @@
   <div style="clear: both;" <="" div="">
 </div></div></div></div>
     <script>
-      var ws = new WebSocket('ws://192.168.3.200:1578/?domain=test.com');
+      var ws = new WebSocket('ws://127.0.0.1:1578/?name=messages');
       ws.onopen = function() {
         //document.body.style.backgroundColor = '#cfc';
       };
